--- a/plot.ipynb
+++ b/plot.ipynb
@@ -685,6 +685,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "bd5b4d75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lllllllllll}\n",
+      "\\toprule\n",
+      "name & Std Acc & LPGD Acc & Std Acc with Intervene 30% & LPGD Acc with Intervene 30% & Std Acc with Intervene 50% & LPGD Acc with Intervene 50% & Std Acc with Intervene 70% & LPGD Acc with Intervene 70% & Std Acc with Intervene 100% & LPGD Acc with Intervene 100% \\\\\n",
+      "\\midrule\n",
+      "cub_backbone_std & 79.58 & 0.91 & - & - & - & - & - & - & - & - \\\\\n",
+      "cub_backbone_lpgd & 75.42 & 48.00 & - & - & - & - & - & - & - & - \\\\\n",
+      "cub_cbm_std & 75.53 & 2.23 & 86.14 & 26.10 & 88.47 & 47.08 & 88.83 & 62.06 & 88.89 & 64.65 \\\\\n",
+      "cub_cbm_lpgd & 73.11 & 42.94 & 74.11 & 53.95 & 73.56 & 56.73 & 73.80 & 57.70 & 73.80 & 57.75 \\\\\n",
+      "cub_cbm_cpgd & 72.78 & 42.06 & 68.95 & 49.10 & 67.40 & 50.16 & 67.57 & 50.97 & 67.60 & 50.95 \\\\\n",
+      "cub_cem_std & 75.91 & 0.59 & 79.43 & 0.81 & 80.12 & 0.97 & 80.24 & 1.05 & 80.24 & 1.05 \\\\\n",
+      "cub_cem_lpgd & 72.99 & 44.84 & 75.99 & 49.14 & 76.89 & 50.55 & 76.96 & 50.74 & 76.98 & 50.78 \\\\\n",
+      "cub_cem_cpgd & 73.49 & 45.69 & 75.92 & 48.79 & 76.35 & 49.41 & 76.37 & 49.52 & 76.37 & 49.52 \\\\\n",
+      "cub_hsic_weight-0.0001_vcbm_res_dim-32_jpgd & 72.07 & 44.53 & 86.68 & 71.90 & 90.32 & 81.72 & 91.01 & 84.14 & 91.32 & 84.23 \\\\\n",
+      "cub_hsic_weight-0.0001_vcbm_res_dim-32_lpgd & 72.95 & 44.99 & 83.93 & 67.14 & 87.64 & 76.37 & 87.87 & 78.77 & 88.13 & 79.00 \\\\\n",
+      "cub_hsic_weight-0.0001_cbm_res_dim-32_jpgd & 73.77 & 45.27 & 83.74 & 69.93 & 86.21 & 74.75 & 86.78 & 76.49 & 86.78 & 76.65 \\\\\n",
+      "cub_vcbm_jpgd & 72.78 & 44.44 & 82.55 & 67.81 & 84.60 & 74.97 & 85.09 & 76.73 & 85.16 & 76.99 \\\\\n",
+      "cub_vcbm_jpgd & 74.54 & 43.72 & 85.52 & 68.52 & 88.80 & 78.25 & 89.30 & 81.29 & 89.32 & 81.57 \\\\\n",
+      "awa_backbone_std & 90.51 & 3.65 & - & - & - & - & - & - & - & - \\\\\n",
+      "awa_backbone_lpgd & 89.09 & 55.86 & - & - & - & - & - & - & - & - \\\\\n",
+      "awa_cbm_std & 90.39 & 2.24 & 93.76 & 78.28 & 93.99 & 87.83 & 93.99 & 87.89 & 93.99 & 87.89 \\\\\n",
+      "awa_cbm_lpgd & 85.46 & 47.61 & 88.29 & 79.51 & 88.44 & 80.92 & 88.44 & 80.91 & 88.44 & 80.91 \\\\\n",
+      "awa_cbm_cpgd & 87.87 & 50.51 & 87.85 & 76.74 & 87.99 & 78.00 & 87.99 & 78.02 & 87.99 & 78.02 \\\\\n",
+      "awa_cem_std & 89.68 & 1.76 & 90.76 & 2.19 & 90.77 & 2.19 & 90.77 & 2.19 & 90.77 & 2.19 \\\\\n",
+      "awa_cem_lpgd & 88.19 & 53.09 & 88.29 & 53.15 & 88.32 & 53.15 & 88.32 & 53.15 & 88.32 & 53.15 \\\\\n",
+      "awa_cem_cpgd & 88.67 & 52.53 & 88.32 & 51.50 & 88.32 & 51.50 & 88.32 & 51.50 & 88.32 & 51.50 \\\\\n",
+      "awa_hsic_weight-0.0001_vcbm_res_dim-32_jpgd-copy & 86.66 & 53.22 & 98.81 & 95.18 & 98.86 & 95.73 & 98.86 & 95.81 & 98.81 & 95.78 \\\\\n",
+      "awa_hsic_weight-0.0001_vcbm_res_dim-32_lpgd-copy & 87.39 & 51.14 & 99.11 & 95.51 & 99.05 & 96.24 & 99.00 & 96.19 & 98.97 & 96.21 \\\\\n",
+      "awa_hsic_weight-0.0001_cbm_res_dim-32_jpgd-copy & 88.26 & 50.65 & 97.05 & 91.42 & 97.05 & 92.51 & 97.05 & 92.51 & 97.05 & 92.51 \\\\\n",
+      "awa_vcbm_jpgd-copy & 87.04 & 50.95 & 98.51 & 95.73 & 98.57 & 96.43 & 98.57 & 96.43 & 98.57 & 96.43 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3755305/49130627.py:58: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '-' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.fillna(\"-\", inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import build_name, get_df\n",
+    "import numpy as np\n",
+    "\n",
+    "names = []\n",
+    "\n",
+    "for dataset in [\"CUB\"]:\n",
+    "    for model in [\"backbone\", \"CBM\", \"CEM\"]:\n",
+    "        for mode in [\"Std\", \"LPGD\", \"CPGD\"]:\n",
+    "            if (mode == \"CPGD\") and model == \"backbone\":\n",
+    "                continue\n",
+    "            name = build_name(\n",
+    "                {\n",
+    "                    \"dataset\": dataset,\n",
+    "                    \"model\": model,\n",
+    "                    \"train_mode\": mode,\n",
+    "                }\n",
+    "            )\n",
+    "            names.append(name)\n",
+    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_vcbm_res_dim-32_jpgd\")\n",
+    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_vcbm_res_dim-32_lpgd\")\n",
+    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_cbm_res_dim-32_jpgd\")\n",
+    "    names.append(dataset.lower() + \"_vcbm_jpgd\")\n",
+    "for dataset in [\"AwA\"]:\n",
+    "    for model in [\"backbone\", \"CBM\", \"CEM\"]:\n",
+    "        for mode in [\"Std\", \"LPGD\", \"CPGD\"]:\n",
+    "            if (mode == \"CPGD\") and model == \"backbone\":\n",
+    "                continue\n",
+    "            name = build_name(\n",
+    "                {\n",
+    "                    \"dataset\": dataset,\n",
+    "                    \"model\": model,\n",
+    "                    \"train_mode\": mode,\n",
+    "                }\n",
+    "            )\n",
+    "            names.append(name)\n",
+    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_vcbm_res_dim-32_jpgd-copy\")\n",
+    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_vcbm_res_dim-32_lpgd-copy\")\n",
+    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_cbm_res_dim-32_jpgd-copy\")\n",
+    "    names.append(dataset.lower() + \"_vcbm_jpgd-copy\")\n",
+    "cols = [\"name\"]\n",
+    "for mode in [\"Std\", \"LPGD\", \"AA\", \"JPGD\", \"CPGD\"]:\n",
+    "    cols.append(mode + \" Acc\")\n",
+    "    cols.append(mode + \" Acc with Intervene\")\n",
+    "\n",
+    "df = get_df(names, cols)\n",
+    "modes = [\"LPGD\", \"AA\", \"JPGD\", \"CPGD\"]\n",
+    "indices = [3, 5, 7, 10]\n",
+    "\n",
+    "for mode in [\"Std\", \"LPGD\", \"AA\", \"JPGD\", \"CPGD\"]:\n",
+    "    for i in indices:\n",
+    "        df[f\"{mode} Acc with Intervene {i*10}%\"] = df.apply(\n",
+    "            lambda row: row[f\"{mode} Acc with Intervene\"][i] \n",
+    "            if isinstance(row[f\"{mode} Acc with Intervene\"], (list, np.ndarray)) \n",
+    "            and len(row[f\"{mode} Acc with Intervene\"]) > i\n",
+    "            else np.nan,\n",
+    "            axis=1\n",
+    "        )\n",
+    "df.fillna(\"-\", inplace=True)\n",
+    "\n",
+    "for mode in [\"LPGD\"]:\n",
+    "    cols = [\"name\", \"Std Acc\", f\"{mode} Acc\"]\n",
+    "    for i in indices:\n",
+    "        cols.append(f\"Std Acc with Intervene {i*10}%\")\n",
+    "        cols.append(f\"{mode} Acc with Intervene {i*10}%\")\n",
+    "    t = df[cols].copy()\n",
+    "\n",
+    "    for col in t.columns:\n",
+    "        t[col] = t[col].fillna(\"-\")\n",
+    "        t[col] = t[col].apply(lambda x: f\"{x * 100:.2f}\" if isinstance(x, float) else x)\n",
+    "    print(t.to_latex(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "bd32641e",
    "metadata": {},
