refactor for reproduce

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "bd5b4d75",
    "metadata": {},
    "outputs": [
@@ -783,10 +783,10 @@
     "                }\n",
     "            )\n",
     "            names.append(name)\n",
-    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_vcbm_res_dim-32_jpgd-copy\")\n",
-    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_vcbm_res_dim-32_lpgd-copy\")\n",
-    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_cbm_res_dim-32_jpgd-copy\")\n",
-    "    names.append(dataset.lower() + \"_vcbm_jpgd-copy\")\n",
+    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_vcbm_res_dim-32_jpgd\")\n",
+    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_vcbm_res_dim-32_lpgd\")\n",
+    "    names.append(dataset.lower() + \"_hsic_weight-0.0001_cbm_res_dim-32_jpgd\")\n",
+    "    names.append(dataset.lower() + \"_vcbm_jpgd\")\n",
     "cols = [\"name\"]\n",
     "for mode in [\"Std\", \"LPGD\", \"AA\", \"JPGD\", \"CPGD\"]:\n",
     "    cols.append(mode + \" Acc\")\n",
